<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rlid"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:background="@drawable/screen"
    tools:context="com.rma.ipanduric.weddie.PotrebeActivity">


    <Button
        android:id="@+id/bHrana"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="@dimen/slikasirina"
        android:text="@string/hrana"
        />

    <Button
        android:id="@+id/bPice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/buttonm"
        android:layout_below="@id/bHrana"
        android:text="@string/pice"
        />
    <Button
        android:id="@+id/bOstalo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/buttonm"
        android:text="@string/ostalo"
        android:layout_below="@id/bPice"
        />

</RelativeLayout>
