<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/home_screen"
    tools:context="com.rma.ipanduric.weddie.MainActivity">

     <Button
        android:id="@+id/bIzracunajPotrebe"
        android:layout_width="@dimen/bWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/bizracunaj"
        android:text="@string/IzracunajPotrebe"
        android:textColor="@color/bTextColor"
         android:layout_marginTop="150dp"
         android:layout_marginLeft="@dimen/marginamain"
         />

    <Button
        android:id="@+id/bPodsjetnik"
        android:layout_width="@dimen/bWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/bpodsjetnik"
        android:text="@string/Podsjetnik"
        android:textColor="@color/bTextColor"
        android:layout_below="@id/bIzracunajPotrebe"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/marginamain"/>

    <Button
        android:id="@+id/bSastaviSL"
        android:layout_width="@dimen/bWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/bsastavicl"
        android:text="@string/SastaviChecklist"
        android:textColor="@color/bTextColor"
        android:layout_below="@id/bPodsjetnik"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/marginamain"
         />

    <Button
        android:id="@+id/bDodajGoste"
        android:layout_width="@dimen/bWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/bgosti"
        android:text="@string/DodajGoste"
        android:textColor="@color/bTextColor"
        android:layout_below="@id/bSastaviSL"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/marginamain"/>

    <Button
        android:id="@+id/bVidiSale"
        android:layout_width="@dimen/bWidth"
        android:layout_height="wrap_content"
        android:background="@drawable/bvidisale"
        android:text="@string/SvecaneSale"
        android:textColor="@color/bTextColor"
        android:layout_below="@id/bDodajGoste"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/marginamain"/>

    <Button
        android:id="@+id/bGlazba"
        android:layout_width="@dimen/buttonsirina"
        android:layout_height="wrap_content"
        android:background="@drawable/bglazba"
        android:textColor="@color/bTextColor"
        android:layout_below="@id/bVidiSale"
        android:layout_alignLeft="@+id/bVidiSale"
        android:layout_alignStart="@+id/bVidiSale"
        android:layout_marginTop="@dimen/lvmargina"
        android:layout_marginLeft="25dp"
        />" />

    <Button
        android:id="@+id/bFoto"
        android:layout_width="@dimen/buttonsirina"
        android:layout_height="wrap_content"
        android:background="@drawable/bfotografija"
        android:textColor="@color/bTextColor"
        android:layout_alignBaseline="@+id/bCvijece"
        android:layout_alignBottom="@+id/bCvijece"
        android:layout_toRightOf="@+id/bGlazba"
        android:layout_toEndOf="@+id/bGlazba"
        android:layout_marginTop="@dimen/lvmargina"
        android:layout_marginLeft="@dimen/marginafotob"

        />

    <Button
        android:id="@+id/bCvijece"
        android:layout_width="@dimen/buttonsirina"
        android:layout_height="wrap_content"
        android:background="@drawable/bcvijece"
        android:textColor="@color/bTextColor"
        android:layout_below="@+id/bVidiSale"
        android:layout_toRightOf="@+id/bFoto"
        android:layout_toEndOf="@+id/bFoto"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/marginafotob"

        />
</RelativeLayout>
